<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_ECODRY_VERSION" Id="{516fcac0-a00a-4d85-8817-0ddd9874b1cb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ECODRY_VERSION :
(
	V01 := 0,
	V21_22
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>