<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_CRYO_PUMP_MODBUS_CFG" Id="{aea8b323-9299-46bc-9580-168d6f1b7df2}">
    <Declaration><![CDATA[TYPE T_CRYO_PUMP_MODBUS_CFG EXTENDS T_CRYO_PUMP_BASE_CFG:
STRUCT
	nSlaveID:	BYTE := 1;
	nVersion:	E_ECODRY_VERSION;
	
	// Register Addresses. See M_UserConfigure().
	aAddr:		ARRAY [1..8] OF INT := [0, 0, 0, 0, 0, 0, 0, 0];
	aWords:		ARRAY [1..8] OF INT := [0, 0, 0, 0, 0, 0, 0, 0];
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>